--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <section>
   <a href="https://github.com/jimkang/gdal-zelda">More details about how these are built.</a>
 </section>
+<section>
+  <img src="found-triforce.png" alt="Found the Triforce!"></img>
+</section>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
