--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </li>
 </ul>
 <section>
-  <a href="https://github.com/jimkang/gdal-zelda">More details about how these are built.</a>
+  <a href="https://github.com/jimkang/gdal-zelda">More details on how these were built.</a>
 </section>
 <section>
   <br /><br /><br /><br />
